[project]
name = "SimQ"
version = "0.1.0"
description = "A SimPy-based queueing network simulation tool."
authors = [
    {name = "galenseilis", email = "galen.seilis@seilis.ca"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
